test/cases/functions/ret_array.c
// RUN: %check -e %s

char ar()[]; // CHECK: error: function returning an array
